Sun May 24 00:42:28 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir: rename class: BranchIf -> CJump.

	* net/loveruby/cflat/ir/IRVisitor.java: follow it.

	* net/loveruby/cflat/compiler/IRGenerator.java: ditto.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

Sun May 24 00:01:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  reorder stmts.

Sat May 23 23:31:17 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring: use
	  reverse(node.args) instead of ListIterator.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

	* net/loveruby/cflat/utils/ListUtils.java: new utility class.

	* net/loveruby/cflat/ast/FuncallNode.java: remove #finalArgs.

	* net/loveruby/cflat/ir/Call.java: ditto.

	* net/loveruby/cflat/ast/FuncallNode.java: refactoring: rename
	  method: arguments -> args.

	* net/loveruby/cflat/compiler/Visitor.java: follow it.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

Sat May 23 22:31:06 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: now NULL is not a reserved
	  word.

	* import/stddef.hb: define const NULL.

Sat May 23 22:22:11 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  rename method: deref -> mem

	* net/loveruby/cflat/type/ArrayType.java: remove useless
	  definition of #isScalar.

Sat May 23 21:33:55 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #bin.

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #isPointerDiff.

	* net/loveruby/cflat/compiler/IRGenerator.java: refactoring:
	  extract method: #isPointerArithmetic.

	* net/loveruby/cflat/type/TypeTable.java: new method #longSize.

	* net/loveruby/cflat/ast/ExprNode.java: remove unused method
	  #baseSize.
